--- a/OCR-Benchmark/app/src/main/res/layout/activity_main.xml
+++ b/OCR-Benchmark/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,19 @@
         android:id="@+id/text_view_process_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/text_view_process_frames_count"
+        android:layout_marginBottom="50dp"
+        android:textAlignment="center"
+        android:text="0 ms" />
+
+    <TextView
+        android:id="@+id/text_view_process_frames_count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/btn_navigate"
         android:layout_marginBottom="100dp"
         android:textAlignment="center"
-        android:text="0 ms" />
+        android:text="0 Frames" />
 
     <Button
         android:id="@+id/btn_navigate"
