--- a/OCR-Benchmark/app/src/main/res/layout/activity_main.xml
+++ b/OCR-Benchmark/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/MainFragment">
 
-    <TextView
-        android:id="@+id/text_view_process_time"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/text_view_process_frames_count"
-        android:layout_marginBottom="50dp"
-        android:textAlignment="center"
-        android:text="0 ms" />
-
-    <TextView
-        android:id="@+id/text_view_process_frames_count"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_navigate"
-        android:layout_marginBottom="100dp"
-        android:textAlignment="center"
-        android:text="0 Frames" />
-
-    <Button
-        android:id="@+id/btn_navigate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Directory"
-        android:layout_centerInParent="true"/>
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/navigation"
+        app:defaultNavHost="true"
+        tools:ignore="MissingConstraints" />
 
 </RelativeLayout>
