--- a/OCR-Benchmark/app/src/main/res/layout/fragment_camera.xml
+++ b/OCR-Benchmark/app/src/main/res/layout/fragment_camera.xml
@@ -47,6 +47,49 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
+        <ImageView
+            android:id="@+id/point1"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/vertex_bounding_box"
+            android:layout_margin="16dp"
+            android:rotation="90"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/point3"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/point2"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/vertex_bounding_box"
+            android:layout_margin="16dp"
+            android:rotation="180"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/point4"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/point3"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/vertex_bounding_box"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/point1"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/point4"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/vertex_bounding_box"
+            android:layout_margin="16dp"
+            android:rotation="-90"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/point2"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
