--- a/OCR-Benchmark/app/src/main/res/layout/fragment_camera.xml
+++ b/OCR-Benchmark/app/src/main/res/layout/fragment_camera.xml
@@ -21,7 +21,6 @@
         android:layout_height="match_parent"
         android:layoutDirection="ltr">
 
-
         <ImageButton
             android:id="@+id/btn_camera_capture"
             android:layout_width="92dp"
@@ -47,8 +46,21 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
+        <View
+            android:id="@+id/rect"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/striped_border"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <ImageView
             android:id="@+id/point1"
+            android:visibility="visible"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:background="@drawable/vertex_bounding_box"
@@ -60,6 +72,7 @@
 
         <ImageView
             android:id="@+id/point2"
+            android:visibility="visible"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:background="@drawable/vertex_bounding_box"
@@ -71,6 +84,7 @@
 
         <ImageView
             android:id="@+id/point3"
+            android:visibility="visible"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:background="@drawable/vertex_bounding_box"
@@ -81,6 +95,7 @@
 
         <ImageView
             android:id="@+id/point4"
+            android:visibility="visible"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:background="@drawable/vertex_bounding_box"
