--- a/OCR-Benchmark/app/src/main/res/navigation/navigation.xml
+++ b/OCR-Benchmark/app/src/main/res/navigation/navigation.xml
@@ -18,4 +18,11 @@
         <action android:id="@+id/action_cameraFragment_to_mainFragment"
             app:destination="@+id/main_fragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/detect_camera_fragment"
+        android:name="com.eduard05.ocr.ui.CameraObjectDetect" >
+        <action android:id="@+id/action_cameraFragment_to_cameraObjectDetect"
+            app:destination="@+id/Came" />
+    </fragment>
 </navigation>
